Update index.html - trying to change footer colour

--- a/traitors/index.html
+++ b/traitors/index.html
@@ -100,6 +100,21 @@ button:hover {
 .hidden {
     display: none;
 }
+
+footer {
+    text-align: center;
+    padding: 2rem 1rem;
+    background: #ffffff; /* white background */
+    color: #333333;      /* dark text for contrast */
+    border-top: 2px solid #f39c12; /* optional accent line */
+}
+
+.logo-container img {
+    max-height: 50px;
+    width: auto;
+    display: inline-block;
+    filter: grayscale(0); /* keeps logos full color */
+}   
 </style>
 </head>
 
