Update index.html - rules

--- a/traitors/index.html
+++ b/traitors/index.html
@@ -188,20 +188,24 @@ footer {
 
     <div id="quickRules" class="hidden">
         <div class="card">
-            <strong>Night Phase:</strong><br>
-            1. Everyone closes eyes<br>
-            2. Sionnaigh choose victim<br>
-            3. Ullchabhán checks<br>
-            4. Gráinneog protects someone<br>
-            5. All back to sleep
+            <strong>Le Linn na hOíche:</strong><br>
+            1. Dúnann gach duine a shúile.<br>
+            2. Osclaíonn na Sionnaigh a shúile.<br>
+            3. Roghnaíonn na Sionnaigh íosphartach.<br>
+            4. Dúnann na Sionnaigh a shúile.<br>
+            5. Osclaíonn an t-Ullchabhán a súile.<br>
+            6. Fiosraíonn an t-Ullchabhán faoi imreoir éigin.<br>
+            7. Dúnann an t-Ullchabhán a súile.<br>
+            8. Osclaíonn an Gráinneog a súile.<br>
+            9. Roghnaíonn siad duine éigin le cosaint.<br>
+            10. Dúnann an Gráinneog a shúile arís.<br>
             <hr>
-            <strong>Day Phase:</strong><br>
-            1. Morning revealed (who was eliminated)<br>
-            2. Discussion among players<br>
-            3. Accusations and defenses<br>
-            4. Secret vote<br>
-            5. Reveal vote and remove eliminated player<br>
-            6. Repeat night/day until victory
+            <strong>I Rith an Lae:</strong><br>
+            1. Dúisíonn gach duine - seachas an té a roghnaigh na Sionnaigh, a bheas amach as an gcluiche. (Mura roghnaigh an Gráinneog an t-imreoir céanna is a roghnaigh na Sionnaigh.)<br>
+            2. Bíonn plé idir na himreoirí ar fad. Cúiseamh, leithscéalta, agus bréaga.<br>
+            3. Scríobhann gach duine síos ainm imreora amháin go bhfuil siad ag iarraidh an ruaig a chur orthu ón bhforaois.<br>
+            4. Nochtar na vótaí, agus bíonn an té leis an líon is mó vótaí amach as an gcluiche.<br>
+            5. Sula n-imíonn siad, insíonn siad don dream eile an Sionnach iad.
         </div>
     </div>
 </section>
