--- a/traitors/index.html
+++ b/traitors/index.html
@@ -191,17 +191,17 @@ footer {
             <strong>Le Linn na hOíche:</strong><br>
             1. Dúnann gach duine a shúile.<br>
             2. Osclaíonn na Sionnaigh a shúile.<br>
-            3. Roghnaíonn na Sionnaigh íosphartach.<br>
+            3. Roghnaíonn na Sionnaigh íospartach.<br>
             4. Dúnann na Sionnaigh a shúile.<br>
-            5. Osclaíonn an t-Ullchabhán a súile.<br>
-            6. Fiosraíonn an t-Ullchabhán faoi imreoir éigin.<br>
-            7. Dúnann an t-Ullchabhán a súile.<br>
-            8. Osclaíonn an Gráinneog a súile.<br>
+            5. Osclaíonn an t-Ulchabhán a súile.<br>
+            6. Fiosraíonn an t-Ulchabhán faoi imreoir éigin.<br>
+            7. Dúnann an t-Ulchabhán a súile.<br>
+            8. Osclaíonn an Ghráinneog a súile.<br>
             9. Roghnaíonn siad duine éigin le cosaint.<br>
-            10. Dúnann an Gráinneog a shúile arís.<br>
+            10. Dúnann an Ghráinneog a shúile arís.<br>
             <hr>
             <strong>I Rith an Lae:</strong><br>
-            1. Dúisíonn gach duine - seachas an té a roghnaigh na Sionnaigh, a bheas amach as an gcluiche. (Mura roghnaigh an Gráinneog an t-imreoir céanna is a roghnaigh na Sionnaigh.)<br>
+            1. Dúisíonn gach duine - seachas an té a roghnaigh na Sionnaigh, a bheas amach as an gcluiche. (Murar roghnaigh an Ghráinneog an t-imreoir céanna is a roghnaigh na Sionnaigh.)<br>
             2. Bíonn plé idir na himreoirí ar fad. Cúiseamh, leithscéalta, agus bréaga.<br>
             3. Scríobhann gach duine síos ainm imreora amháin go bhfuil siad ag iarraidh an ruaig a chur orthu ón bhforaois.<br>
             4. Nochtar na vótaí, agus bíonn an té leis an líon is mó vótaí amach as an gcluiche.<br>
