--- a/traitors/index.html
+++ b/traitors/index.html
@@ -6,15 +6,13 @@
 <title>Na Sionnaigh – Traitors as Gaeilge</title>
 
 <!-- Fancy but readable font for title -->
-<link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
 
 <style>
-body {
-    margin: 0;
-    font-family: "Segoe UI", sans-serif;
-    background: #f5f5f5;
-    color: #222222;
-    line-height: 1.5;
+header h1 {
+    font-family: 'Cinzel', serif; /* elegant but not over the top */
+    font-size: 3rem;
+    margin-bottom: 0.5rem;
 }
 
 header {
@@ -113,7 +111,7 @@ footer {
 
 <header>
     <h1>Na Sionnaigh</h1>
-    <p>Cluiche “Traitors” as Gaeilge</p>
+    <p><i></i>Cluiche “Traitors” as Gaeilge<i></i></p>
     <p class="blurb">
         Tá pobal soineanta coiníní ina gcónaí san fhoraois - ach i ngan fhios dóibh, tá fealltóirí ina measc.
         Le titim na hoíche, dúisíonn na Sionnaigh agus roghnaíonn siad íospartach. Faoi sholas an lae,
@@ -168,7 +166,7 @@ footer {
 </section>
 
 <section>
-    <h2>🎲 Achoimre ghearr</h2>
+    <h2>🎲 Achoimre ghearr ar na tréimhsí oíche agus lae</h2>
     <button onclick="toggleRules()">Taispeáin / Folaigh Achoimre</button>
     <div id="quickRules" class="hidden">
         <div class="card">
