--- a/traitors/index.html
+++ b/traitors/index.html
@@ -111,14 +111,14 @@ footer {
 
 <header>
     <h1>Na Sionnaigh</h1>
-    <p><i></i>Cluiche “Traitors” as Gaeilge<i></i></p>
+    <p><i>Cluiche “Traitors” as Gaeilge</i></p>
     <p class="blurb">
         Tá pobal soineanta coiníní ina gcónaí san fhoraois - ach i ngan fhios dóibh, tá fealltóirí ina measc.
         Le titim na hoíche, dúisíonn na Sionnaigh agus roghnaíonn siad íospartach. Faoi sholas an lae,
         líontar an fhoraois le cúisimh, le leithscéalta, agus le hamhras...
     </p>
     <p><strong>Marta 6 ó 19:00-22:00 in Áras na nGael, Sráid Dhoiminic, H91 E1NY</strong></p>
-    <img src="https://raw.githubusercontent.com/HFintan/feilire/main/traitors2.jpeg" alt="Sionnach i bhfolach i measc coiníní san fhoraois">
+    <img src="https://raw.githubusercontent.com/HFintan/feilire/main/traitors2.jpeg" alt="Sionnach i bhfolach i measc coiníní san fhoraois" width="400">
 </header>
 
 <section>
@@ -130,7 +130,7 @@ footer {
 </section>
 
 <section>
-    <h2>🎲 Dáileadh</h2>
+    <h2>🎲 Dáileadh Ról agus Cur in Aithne</h2>
     <div class="card">
         Faigheann gach duine cárta a insíonn dóibh cén ról a bheas acu. Babhta beag cur in aithne - líne amháin ó gach duine: ainm, ról, agus píosa eolais eile.
         <i>"Is mise Áine, is coinín mé, agus is breá liom nóiníní."</i> Ar ndóigh, is féidir bréag a insint...
