Update index.html - faq

--- a/traitors/index.html
+++ b/traitors/index.html
@@ -117,7 +117,7 @@ footer {
         Le titim na hoíche, dúisíonn na Sionnaigh agus roghnaíonn siad íospartach. Faoi sholas an lae,
         líontar an fhoraois le cúisimh, le leithscéalta, agus le hamhras...
     </p>
-    <p><strong>Marta 6 ó 19:00-22:00 in Áras na nGael, Sráid Dhoiminic, H91 E1NY</strong></p>
+    <p><strong>Márta 6ú ó 18:00-22:00 in Áras na nGael, Sráid Dhoiminic, H91 E1NY</strong></p>
     <img src="https://raw.githubusercontent.com/HFintan/feilire/main/traitors2.jpeg" alt="Sionnach i bhfolach i measc coiníní san fhoraois" width="400">
 </header>
 
@@ -130,7 +130,7 @@ footer {
 </section>
 
 <section>
-    <h2>🎲 Dáileadh Ról agus Cur in Aithne</h2>
+    <h2> Dáileadh Ról agus Cur in Aithne</h2>
     <div class="card">
         Faigheann gach duine cárta a insíonn dóibh cén ról a bheas acu. Babhta beag cur in aithne - líne amháin ó gach duine: ainm, ról, agus píosa eolais eile.
         <i>"Is mise Áine, is coinín mé, agus is breá liom nóiníní."</i> Ar ndóigh, is féidir bréag a insint...
@@ -166,7 +166,7 @@ footer {
 </section>
 
 <section>
-    <h2>🎲 Achoimre ghearr ar na tréimhsí oíche agus lae</h2>
+    <h2>🎲 Achoimre ghearr ar na tréimhsí oíche agus lae, le haghaidh an scéalaí.</h2>
     <button onclick="toggleRules()">Taispeáin / Folaigh Achoimre</button>
     <div id="quickRules" class="hidden">
         <div class="card">
@@ -175,9 +175,9 @@ footer {
             2. Osclaíonn na Sionnaigh a shúile.<br>
             3. Roghnaíonn na Sionnaigh íospartach.<br>
             4. Dúnann na Sionnaigh a shúile.<br>
-            5. Osclaíonn an t-Ullchabhán a súile.<br>
-            6. Fiosraíonn an t-Ullchabhán faoi imreoir éigin.<br>
-            7. Dúnann an t-Ullchabhán a súile.<br>
+            5. Osclaíonn an tUlchabhán a súile.<br>
+            6. Fiosraíonn an tUlchabhán faoi imreoir éigin.<br>
+            7. Dúnann an tUlchabhán a súile.<br>
             8. Osclaíonn an Ghráinneog a súile.<br>
             9. Roghnaíonn siad duine éigin le cosaint.<br>
             10. Dúnann an Ghráinneog a shúile arís.<br>
@@ -192,21 +192,24 @@ footer {
     </div>
 </section>
 
-<!--<section>
+<section>
     <h2>❓ Fiosrúcháin Damanta</h2>
     <div class="card">
-        <strong>C1:</strong> Mura bhféidir leat labhairt, conas a n-insítear cén d  <br>
-        <em>Ar ndóigh, caithfear fanacht i do thost le linn na hoíche, ionas nach mbeidh a fhios ag na himreoirí eile cén ról a bhfuil agat.</em>
+        <strong>C1:</strong> Mura bhféidir leat labhairt, conas a n-insítear cén dóigh a bheidh fhios ag na sionnaigh srl cathain gur féidir leo a shúile a oscailt, conas a roghnaítear íospartach srl? <br>
+        <em>Ar ndóigh, caithfear fanacht i do thost le linn na hoíche, ionas nach mbeidh a fhios ag na himreoirí eile cén ról a bhfuil agat. Bíonn scéalaí ag stiúradh na hoíche, ag rá leis na hainmhithe éagsúla cathain 
+    ar cheart dóibh a súile a oscailt, srl. Agus le cur in iúl don scéalaí cén íospartach atá roghnaithe, tig leat do cheann a chromadh nó méar a shíneadh ina dtreo, ach caithfear a bheith ciúin! 
+    Moltar gan éadaí nó seodra glórach a caitheamh.</em>
     </div>
     <div class="card">
-        <strong>C2:</strong> An féidir an cluiche a imirt gan na rólanna speisialta?<br>
+        <strong>C2:</strong> Cé chomh fada a mhaireann sé?</strong><br>
+        <em>Thart ar 10-15 nóiméad do bhabhta iomlán (oíche + lá), so thart ar uair le haghaidh cluiche iomlán.</em>
+    <!--</div>
+    <div class="card">
+        <strong>C3:</strong> An féidir an cluiche a imirt gan na rólanna speisialta?<br>
         <em>Sea, ach bíonn sé níos spraíúla le gach ról sa cluiche.</em>
-    </div>
-    <div class="card">
-        <strong>C3:</strong> Cé chomh fada a mhaireann babhta amháin?</strong><br>
-        <em>Thart ar 10–15 nóiméad do bhabhta iomlán (oíche + lá).</em>
-    </div>
-</section>-->
+    </div>-->
+
+</section>
 
 <footer>
   <div class="logo-container">
