Update index.html - some qs

--- a/traitors/index.html
+++ b/traitors/index.html
@@ -193,21 +193,48 @@ footer {
 </section>
 
 <section>
-    <h2>❓ Fiosrúcháin Damanta</h2>
+    <h2>❓ Fiosrúcháin Coitianta </h2>
     <div class="card">
-        <strong>C1:</strong> Mura bhféidir leat labhairt, conas a n-insítear cén dóigh a bheidh fhios ag na sionnaigh srl cathain gur féidir leo a shúile a oscailt, conas a roghnaítear íospartach srl? <br>
+        <strong>Mura bhféidir leat labhairt, conas a n-insítear cén dóigh a bheidh fhios ag na sionnaigh srl cathain gur féidir leo a shúile a oscailt, conas a roghnaítear íospartach srl?</strong><br>
         <em>Ar ndóigh, caithfear fanacht i do thost le linn na hoíche, ionas nach mbeidh a fhios ag na himreoirí eile cén ról a bhfuil agat. Bíonn scéalaí ag stiúradh na hoíche, ag rá leis na hainmhithe éagsúla cathain 
     ar cheart dóibh a súile a oscailt, srl. Agus le cur in iúl don scéalaí cén íospartach atá roghnaithe, tig leat do cheann a chromadh nó méar a shíneadh ina dtreo, ach caithfear a bheith ciúin! 
     Moltar gan éadaí nó seodra glórach a caitheamh.</em>
     </div>
     <div class="card">
-        <strong>C2:</strong> Cé chomh fada a mhaireann sé?</strong><br>
+        <strong>Cé chomh fada a mhaireann sé?</strong><br>
         <em>Thart ar 10-15 nóiméad do bhabhta iomlán (oíche + lá), so thart ar uair le haghaidh cluiche iomlán.</em>
-    <!--</div>
+    </div>
     <div class="card">
-        <strong>C3:</strong> An féidir an cluiche a imirt gan na rólanna speisialta?<br>
-        <em>Sea, ach bíonn sé níos spraíúla le gach ról sa cluiche.</em>
-    </div>-->
+        <strong>Cad a tharlaíonn má tá comhscór ann théis vótáil?</strong> <br>
+        <em>Athdhéantar an vótáil, gan chead éinne a roghnú seachas iadsan a raibh comhscór eatarthu. Más comhscór atá ann arís, déantar an cinneadh trí bhonn a chaitheamh.</em>
+    </div>
+    <div class="card">
+        <strong>An bhfuil gá clárú roimh ré?</strong> <br>
+        <em>Ba cheart - beidh líon teoranta cluichí agus caraictéir, agus nílimid ag iarraidh go mbeadh díomá ar éinne.</em>
+    </div>
+    <div class="card">
+        <strong>Níl mé ag iarraidh páirt a ghlacadh, ach an mbeadh cead agam freastal agus éisteacht?</strong> <br>
+        <em>Céad míle fáilte romhat a bheith sa lucht éisteachta. Ba cheart fós clárú más féidir - cabhrach ó thaobh bia a ordú srl.</em>
+    </div>
+    <div class="card">
+        <strong>Níl Gaeilge líofa agam - an féidir liom fós páirt a glacadh?</strong> <br>
+        <em> Is féidir. Sa bhfoirm clárúcháin, is féidir do leibhéal Gaeilge a lua, agus seans go ndéanfaimid iarracht daoine den líofacht céanna a chur le chéile. 
+            Níos cóngairí don am, roinnfear liosta téarmaí/frásaí úsáideacha ar an leathanach seo.</em>
+    </div>
+    <div class="card">
+        <strong>An bhfuil costas nó duaiseanna ag baint leis an imeachta?</strong> <br>
+        <em> Níl costas ag baint leis, agus beidh cúpla duais randamach ar an oíche. Ní féidir duaiseanna a thabhairt do na buaiteoirí, toisc go mbíonn ag foireann na sionnach ar fad, nó ag na hainmhithe eile ar fad, agus bheadh an méid
+        sin duaiseanna indéanta.</em>
+    </div>
+    <div class="card">
+        <strong>An gá gléasadh suas?</strong> <br>
+        <em> Ní gá. Ach má tá feisteas oiriúnach agat, fáilte romhat é a chaitheamh!</em>
+    </div>
+
+
+
+
+
 
 </section>
 
