--- a/traitors/index.html
+++ b/traitors/index.html
@@ -111,7 +111,7 @@ footer {
 
 <header>
     <h1>Na Sionnaigh</h1>
-    <p><i>Cluiche “Traitors” as Gaeilge</i></p>
+    <p><i>Cluiche “Traitors” as Gaeilge á óstáil ag Na Cabairí</i>
     <p class="blurb">
         Tá pobal soineanta coiníní ina gcónaí san fhoraois - ach i ngan fhios dóibh, tá fealltóirí ina measc.
         Le titim na hoíche, dúisíonn na Sionnaigh agus roghnaíonn siad íospartach. Faoi sholas an lae,
