--- a/traitors/index.html
+++ b/traitors/index.html
@@ -231,9 +231,11 @@ footer {
         <em> Ní gá. Ach má tá feisteas oiriúnach agat, fáilte romhat é a chaitheamh!</em>
     </div>
 
+    <p style="text-align: center;">
 <br><br>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfiDvNJG2dDp2mpHyZZ4qFZLR2GWwftWlQmlXCpLizApkDb6w/viewform?embedded=true" width="640" height="1679" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <br><br>
+        <p>
 
 </section>
 
